--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -7,8 +7,6 @@
   <string name="stop">Стоп</string>
   <string name="starting">Запускается</string>
   <string name="stopping">Останавливается</string>
-  <string name="started">Запущено</string>
-  <string name="stopped">Остановлено</string>
   <string name="ksPassw">Пароль:</string>
   <string name="ksPasswRep">Повторите пароль:</string>
   <string name="ajettyNumber">А-Джетти номер:</string>
@@ -16,9 +14,8 @@
   <string name="EnterAjettyNumber">Пожалуйста введите номер А-Джетти!</string>
   <string name="ajettycacopied">А-Джетти ЦА сертификат и публичный ключ обмена файлами в файлах ajetty-ca.pem и ajetty-file-exch[А-Джетти#].kpub files.</string>
   <string name="passwordWrong">Неправильный пароль!</string>
-  <string name="wait">Пожалуйста подождите!</string>
   <string name="enterPassw">Пожалуйста введите пароль!</string>
-  <string name="sendingStart">Запускаю сервер, подождите...</string>
+  <string name="sendingStart">Запускаю сервер, подождите&#8230;</string>
   <string name="cantStart">Не могу запустить А-Джетти!</string>
   <string name="cantInitCrypto">Не могу инициализировать крипто-сервис!</string>
   <string name="cantCrDir">Не могу создать ks директорию!</string>
@@ -27,5 +24,5 @@
   <string name="newFlCop">Новые версии WEB static файлов скопированы!</string>
   <string name="dirCrFlCop">Беижсофт директория создана и WEB static файлы скопированы!</string>
   <string name="srvStrt">А-Джетти запущен.</string>
-  <string name="srvStop">ВЕБ-Сервер А-Джетти остановлен.</string>
+  <string name="noPerm">Нет разрешений к внутренниму хранилищу!</string>
 </resources>
