privacy policy corrected 4

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -31,14 +31,14 @@
   <string name="save">Сохранить</string>
   <string name="cancel">Отмена</string>
   <string name="privAll">Беижсофт™ ИСП сохраняет вашу информацию только в файлах базы данных. Лог-файлы также могут содержать приватную информацию.
-  Приложение работает на встроенном приватном Веб-сервере А-Джетти. Данный приватный Веб-Сервер не доступен за пределами вашего Андроид-устройства.
-  Приложение требует авторизацию с надежным паролем (вы сами создаете пароль, а программное обеспечение контролирует его надежность). Приложение позволяет максимум 6 неудачных попыток авторизации. Доступ будет заблокирован на 15 минут в случае 6 неудачных попыток авторизации. Вам необходимо периодически проверять файл <b>logSec.log</b> хранящий информацию об авторизациях.
-  Приложение использует современное шифрование данных проходящих от сервера к браузеру (HTTPS соединение) и обмениваемых файлов (базы данных и лог-файлов).
-  Ваша  информация (SQLite базы данных), logStd.log, logSec.log, хранилище ключей шифрования находятся в месте недоступном другому программному обеспечению. Только данное приложение может читать и изменять эти данные.
-  Если вы забудите пароль от хранилища ключей шифрования и (или) от входа в приложение, то вы потеряете вашу информацию. Поэтому вам необходимо делать архивную шифрованную копию базы данных используя Веб-интерфейс. Для этого необходима вторая локальная Беижсофт™ ИСП, установленная на другом компьютере или Андроид-устройстве. Публичный ключ шифрования от второй копии приложения используется для шифрования файлов, и лишь оно (чей публичный ключ использовался для шифрования) может расшифровать переданные файлы.
-  PDF отчеты будут загружены в общую папку "Загрузки" или "Downloads", поэтому избегайте установки ненужных приложений требующих доступ к общему хранилищу. При соединении Андроид устройства к компьютеру в режиме обмена файлов, любое приложение на компьютере будет иметь прямой доступ к данным файлам. Вам необходимо удалять эти PDF файлы из общего хранилища после их просмотра.
-  Если вы собираетесь передать Лог файлы третьей стороне (например программисту обслуживающему данное программное обеспечение), то вам необходимо удалить всю приватную информацию из этих файлов.
-  Вам нужно также установить блокировку экрана (например ПИН-код).
-  Для работы с данным приложением вам необходимо принять данные условия.
+Приложение работает на встроенном приватном Веб-сервере А-Джетти. Данный приватный Веб-Сервер недоступен за пределами вашего Андроид-устройства.
+Приложение требует авторизацию с надежным паролем (вы сами создаете пароль, а программное обеспечение контролирует его надежность). Приложение позволяет максимум 6 неудачных попыток авторизации. Доступ будет заблокирован на 15 минут в случае 6 неудачных попыток авторизации. Вам необходимо периодически проверять файл "logSec.log" хранящий информацию об авторизациях.
+Приложение использует современное шифрование данных передаваемых от сервера к браузеру (HTTPS соединение) и обмениваемых файлов (базы данных и лог-файлов).
+Ваша  информация (SQLite базы данных), logStd.log, logSec.log, хранилище ключей шифрования находятся в месте недоступном другому программному обеспечению.
+Если вы забудите пароль от хранилища ключей шифрования и (или) от входа в приложение, то вы потеряете вашу информацию. Поэтому вам необходимо делать шифрованную копию базы данных используя Веб-интерфейс. Для этого необходима вторая локальная Беижсофт™ ИСП, установленная на другом компьютере или Андроид-устройстве. Публичный ключ шифрования от второй копии приложения используется для шифрования файлов, и лишь оно (чей публичный ключ использовался для шифрования) может расшифровать переданные файлы.
+PDF отчеты будут загружены в общую папку "Загрузки" или "Downloads", поэтому избегайте установки ненужных приложений требующих доступ к общему хранилищу. При соединении Андроид устройства к компьютеру в режиме обмена файлов, любое приложение на компьютере будет иметь прямой доступ к данным файлам. Вам необходимо удалять эти PDF файлы из общего хранилища после их просмотра.
+Если вы собираетесь передать Лог файлы третьей стороне (например программисту обслуживающему данное программное обеспечение), то вам необходимо удалить всю приватную информацию из этих файлов.
+Вам нужно также установить блокировку экрана (например ПИН-код).
+Для работы с данным приложением вам необходимо принять данные условия.
 </string>
 </resources>
