--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -2,7 +2,16 @@
 <resources>
 
   <string name="app_name">Беижсофт™ ИСП</string>
-  <string name="share">Обмен файлами</string>
+  <string name="ImpSqlite">Импорт СКЛАЙТ ДБ</string>
+  <string name="fileImpd">Файл импортирован</string>
+  <string name="alert_dialog_ok">OK</string>
+  <string name="permGr">Разрешения даны</string>
+  <string name="permNoGr">Разрешения не даны</string>
+  <string name="permAlGr">Разрешения уже были даны</string>
+  <string name="permTi">Разрешения</string>
+  <string name="perm">Программе необходимо разрешение на доступ интернет для работы и импорта из клауд версии! Также необходимо разрешение на фоновый сервис для работы ВЕБ-сервера!</string>
+  <string name="expCaCe">Експорт А-Джетти ЦА сертификата</string>
+  <string name="expLog">Експорт лог-файла</string>
   <string name="port">Порт:</string>
   <string name="start">Старт</string>
   <string name="stop">Стоп</string>
@@ -25,12 +34,12 @@
   <string name="newFlCop">Новые версии WEB static файлов скопированы!</string>
   <string name="dirCrFlCop">Беижсофт директория создана и WEB static файлы скопированы!</string>
   <string name="srvStrt">А-Джетти запущен.</string>
-  <string name="noPerm">Нет разрешений к внутренниму хранилищу!</string>
   <string name="privTitle">Политика конфиденциальности</string>
   <string name="agree">Я принимаю условия политики конфиденциальности</string>
   <string name="urlPrv">Страница политики конфиденциальности</string>
   <string name="save">Сохранить</string>
   <string name="cancel">Отмена</string>
+  <string name="errStartLog">Не могу создать стартовый лог</string>
   <string name="privAll">Беижсофт™ ИСП сохраняет вашу информацию только в файлах базы данных. Лог-файлы также могут содержать приватную информацию.
 Приложение работает на встроенном приватном Веб-сервере А-Джетти. Данный приватный Веб-Сервер недоступен за пределами вашего Андроид-устройства.
 Приложение требует авторизацию с надежным паролем (вы сами создаете пароль, а программное обеспечение контролирует его надежность). Приложение позволяет максимум 6 неудачных попыток авторизации. Доступ будет заблокирован на 15 минут в случае 6 неудачных попыток авторизации. Вам необходимо периодически проверять файл "logSec.log" хранящий информацию об авторизациях.
