--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -6,8 +6,14 @@
   <string name="impPubExch">Import exchange public key</string>
   <string name="ImpSqlite">Import SQLITE DB</string>
   <string name="expSqlt">Export SQLITE DB</string>
+  <string name="impEnSqlt">Import encrypted SQLITE DB</string>
+  <string name="impEnSqltSg">Import encrypted SQLITE DB\'s signature</string>
+  <string name="impEnSqltSk">Import encrypted SQLITE DB\'s SK</string>
+  <string name="impEnSqltSks">Import encrypted SQLITE DB\'s SK\'s signature</string>
   <string name="expEnSqlt">Export encrypted SQLITE DB</string>
   <string name="expEnSqltSg">Export encrypted SQLITE DB\'s signature</string>
+  <string name="expEnSqltSk">Export encrypted SQLITE DB\'s SK</string>
+  <string name="expEnSqltSks">Export encrypted SQLITE DB\'s SK\'s signature</string>
   <string name="fileImpd">File has been imported</string>
   <string name="alert_dialog_ok">OK</string>
   <string name="permGr">Permissions granted</string>
@@ -46,11 +52,17 @@
   <string name="save">Save</string>
   <string name="cancel">Cancel</string>
   <string name="errStartLog">Can\'t create starter file log</string>
-  <string name="privAll">Beigesoft™ EIS only stores your information in database files. Log files may also contain private information.
-This application is based on the built-in private A-Jetty Web server. This private Web Server is not accessible outside of your Android device. This application requires authorization with a strong password (you create a password yourself, and the software controls its reliability). This application allows a maximum of 6 failed authorization attempts. Access will be blocked for 15 minutes in case of 6 unsuccessful login attempts. You need to periodically check the logSec.log file for authorization information.
+  <string name="privAll">Beigesoft™ EIS stores your information in database files. Log files may also contain private information.
+This application is based on the built-in private A-Jetty Web server. This private Web Server is not accessible outside of your Android device.
+This application requires authorization with a strong password (you create a password yourself, and the software controls its reliability). This application allows 6 failed authorization attempts. Access will be blocked for 15 minutes in case of 6 unsuccessful login attempts. You need to periodically check the logSec.log file for authorization information.
 This application uses modern encryption of data passing from the server to the browser (HTTPS connection) and exchanged files (databases and log files).
-Your information (SQLite database), logStd.log, logSec.log, keystore are in a place inaccessible to other software. If you forget the password from the keystore or from entering the application, then you will lose your information. Therefore, you need to make an encrypted copy of the database using the Web interface. To do this, you need a second local Beigesoft™ EIS installed on another computer or Android device. The public encryption key from the second copy of the application is used to encrypt files, and only the second application (whose public key was used to encrypt) can decrypt the transferred files. PDF reports will be uploaded to the Downloads shared folder, so avoid installing unnecessary applications that require access to the storage. When you connect your Android device to a computer in file sharing mode, any application on the computer will have direct access to these files. You need to delete these PDF files from the shared storage after viewing them.
-If you are going to transfer Log files to a third party (for example, to the programmer serving this software), then you need to delete all private information from these files.
+Your information (SQLite database), logStd.log, logSec.log, keystore are in the place that is inaccessible to other software. If you forget the keystore or the application password, then you will lose your information. Therefore, you need to periodically make  a copy of the database into Google Drive. In addition, you can use encryption for the database, but this is appropriate when you send an encrypted database into Beigesoft™ EIS that is installed on a computer in protected from light harmful software way.
+This application has no direct  access to your files on Google Drive, that is it can not list or read them. It only asks Google Drive Application for sending or receiving a file interactively, that is with user (your) confirmation.
+PDF reports will be downloaded into the Downloads shared folder, so avoid installing unnecessary applications that require access to the storage. When you connect your Android device to a computer in file sharing mode, then any application on the computer will have direct access to these files. You need to delete these PDF files from the shared storage after viewing them.
+When all Android applications will be forced to use "scoped storage", then they will have only interactive access to files in the Downloads folder.
+When your browser will pass a PDF file to a PDF viewer via the secure transport (not via shared Download folder), then all other applications will have no access to your PDF files.
+This application has neither direct nor interactive access to files on the shared storage.
+When you are going to send Log files to a third party (for example, to the programmer serving this software), then you need to delete all private information from these files.
 You also need to set a screen lock, such as a PIN code.
 You must accept this policy in order to work with this application.
   </string>
