--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -58,12 +58,12 @@
 Приложение требует авторизацию с надежным паролем (Вы сами создаете пароль, а программное обеспечение контролирует его надежность). Приложение позволяет максимум 6 неудачных попыток авторизации. Доступ будет заблокирован на 15 минут в случае 6 неудачных попыток авторизации. Вам необходимо периодически проверять файл "logSec.log" хранящий информацию об авторизациях.
 Приложение использует современное шифрование данных передаваемых от сервера к браузеру (HTTPS соединение) и обмениваемых файлов (базы данных и лог-файлов).
 Ваша  информация (SQLite базы данных), logStd.log, logSec.log, хранилище ключей шифрования находятся в месте недоступном другому программному обеспечению.
-Если Вы забудите пароль от хранилища ключей шифрования и (или) от входа в приложение, то Вы потеряете Вашу информацию. Поэтому Вам необходимо периодически копировать базу данных на Гугл Драйв. Вы также можете шифровать передаваемую базу данных и Лог-файлы, но это имеет смысл лишь при передаче для Беижсофт™ ИСП установленной на другом компьютере в режиме защиты от легкого вредоносного ПО.
+Если Вы забудите пароль от хранилища ключей шифрования и (или) от входа в приложение, то Вы потеряете Вашу информацию. Поэтому Вам необходимо периодически копировать базу данных на Гугл Драйв. Вы также можете шифровать передаваемую базу данных и Лог-файлы, но это имеет смысл лишь при передаче для Беижсофт™ ИСП установленной на другом компьютере в режиме защиты от легкого вредоносного ПО. Не используйте общее хранилище для экспорта или импорта незашифрованной приватной информации.
 Приложение не имеет прямого доступа к Вашим файлам на Гугл Драйв. Оно может только посылать или принимать одиночный файл через Приложение Гугл Драйв в интерактивном режиме (с Вашего разрешения).
 PDF отчеты будут загружены в общую папку "Загрузки" или "Downloads", поэтому избегайте установки ненужных приложений требующих доступ к общему хранилищу. При соединении Андроид устройства к компьютеру в режиме обмена файлов, любое приложение на компьютере будет иметь прямой доступ к данным файлам. Вам необходимо удалять эти PDF файлы из общего хранилища после их просмотра.
 Когда все Андроид-приложения перейдут на использования "scoped storage", тогда они будут иметь только интерактивный доступ к файлам  в общей папке "Загрузки".
 Когда Ваш браузер будет передавать PDF файл в просмотрщик используя приватный транспорт (не папку "Загрузки"), тогда остальные приложения не будут иметь доступа к Вашим PDF отчетам.
-Приложение не имеет ни прямого, ни интерактивного доступа к файлам в общем хранилище.
+Приложение не имеет прямого доступа к файлам в общем хранилище. Вы можете использовать общее хранилище (выбрать его вместо Гугл Драйв) для экспорта или импорта неприватной информации (например сертификат ajetty-ca#.pem) или зашифрованной приватной.
 Вам нужно также установить блокировку экрана (например ПИН-код).
 Для работы с данным приложением вам необходимо принять данные условия.
 </string>
