--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -4,16 +4,16 @@
   <string name="app_name">Беижсофт™ ИСП</string>
   <string name="expPubExch">Экспорт публичного ключа обмена</string>
   <string name="impPubExch">Импорт публичного ключа обмена</string>
-  <string name="ImpSqlite">Импорт СКЛАЙТ ДБ</string>
-  <string name="expSqlt">Экспорт СКЛАЙТ ДБ</string>
-  <string name="impEnSqlt">Импорт зашифрованной СКЛАЙТ ДБ</string>
-  <string name="impEnSqltSg">Импорт подписи зашифрованной СКЛАЙТ ДБ</string>
-  <string name="impEnSqltSk">Импорт СК шифрации СКЛАЙТ ДБ</string>
-  <string name="impEnSqltSks">Импорт подписи СК шифрации СКЛАЙТ ДБ</string>
-  <string name="expEnSqlt">Экспорт зашифрованной СКЛАЙТ ДБ</string>
-  <string name="expEnSqltSg">Экспорт подписи зашифрованной СКЛАЙТ ДБ</string>
-  <string name="expEnSqltSk">Экспорт СК шифрации СКЛАЙТ ДБ</string>
-  <string name="expEnSqltSks">Экспорт подписи СК шифрации СКЛАЙТ ДБ</string>
+  <string name="ImpSqlite">Импорт СКЛАЙТ БД</string>
+  <string name="expSqlt">Экспорт СКЛАЙТ БД</string>
+  <string name="impEnSqlt">Импорт зашифрованной СКЛАЙТ БД</string>
+  <string name="impEnSqltSg">Импорт подписи зашифрованной СКЛАЙТ БД</string>
+  <string name="impEnSqltSk">Импорт СК шифрации СКЛАЙТ БД</string>
+  <string name="impEnSqltSks">Импорт подписи СК шифрации СКЛАЙТ БД</string>
+  <string name="expEnSqlt">Экспорт зашифрованной СКЛАЙТ БД</string>
+  <string name="expEnSqltSg">Экспорт подписи зашифрованной СКЛАЙТ БД</string>
+  <string name="expEnSqltSk">Экспорт СК шифрации СКЛАЙТ БД</string>
+  <string name="expEnSqltSks">Экспорт подписи СК шифрации СКЛАЙТ БД</string>
   <string name="fileImpd">Файл импортирован</string>
   <string name="alert_dialog_ok">OK</string>
   <string name="permGr">Разрешения даны</string>
